fixed FUSETOOLS-1173